--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "start": "nodemon App.ts",
+    "start": "node ./dist/App.js",
+    "dev": "node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --notify false --prefer-ts --ignore-watch node_modules -- App.ts ",
     "build": "tsc -p ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +21,6 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.7.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.45",
     "typeorm-naming-strategies": "^4.0.0"
@@ -36,6 +36,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.5.1",
+    "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.2"
   }
