Adds pass to database, fixes eslint

--- a/.env.model
+++ b/.env.model
@@ -1,10 +1,14 @@
-# DATABASE VARIABLES
-
+### DATABASE ###
 DB_HOST=
 DB_PORT=
 DB_USER=
+DB_PASS=
 DB_NAME=
 
-# SERVER
-
+### SERVER ###
 SERVER_PORT=
+
+### CLOUDINARY ###
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
