--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,9 +18,8 @@
                 "@typescript-eslint/comma-dangle": ["error", "never"],
                 "@typescript-eslint/indent": ["error", 4],
                 "@typescript-eslint/quotes": ["error", "single"],
+                "no-unused-vars": "off",
                 "@typescript-eslint/no-unused-vars": ["error", {
-                    "vars": "all",
-                    "args": "all",
                     "argsIgnorePattern": "^_",
                     "varsIgnorePattern": "^_",
                     "caughtErrorsIgnorePattern": "^_"
