--- a/package.json
+++ b/package.json
@@ -12,22 +12,28 @@
   "author": "LucasMRC",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "keyv": "^4.3.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
-    "typeorm": "^0.3.6",
+    "typeorm": "0.2.45",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/keyv": "^3.1.4",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
