--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "LucasMRC",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "cloudinary": "^1.29.0",
@@ -26,10 +25,11 @@
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
-    "typeorm": "0.2.45",
+    "typeorm": "^0.3.6",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
