--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.3.0"
   },
   "scripts": {
-    "start": "node ./dist/App.js",
+    "start": "node -r ./tsconfig-paths-bootstrap.js ./dist/App.js",
     "dev": "node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --notify false --prefer-ts --ignore-watch node_modules -- App.ts ",
     "build": "tsc -p ./",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -46,7 +46,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.5.1",
-    "ts-node-dev": "^1.1.8",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.2"
   }
