--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"module": "commonjs",
 		"rootDir": "./",
 		"moduleResolution": "node",
+		"esModuleInterop": true,
 		"baseUrl": ".",
 		"paths": {
 			"@src/*": ["src/*"],
