--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -29,4 +29,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: sh deploy.sh
+    - run: pm2 restart trade-journal
