--- a/.github/workflows/CD-DEV.yml
+++ b/.github/workflows/CD-DEV.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       env:
         QA_ENV_FILE: ${{ secrets.DEV_ENVs }}
+        # PROD_ENV_FILE: ${{ secrets.PROD_ENVs }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
@@ -29,4 +30,4 @@ jobs:
     - run: npm i
     - run: echo $QA_ENV_FILE > .env
     - run: npm run build
-    - run: pm2 restart trade-journal
+    - run: npm run start
