--- a/.github/workflows/CD-DEV.yml
+++ b/.github/workflows/CD-DEV.yml
@@ -20,14 +20,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
-      env:
-        QA_ENV_FILE: ${{ secrets.DEV_ENVs }}
-        # PROD_ENV_FILE: ${{ secrets.PROD_ENVs }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: echo $QA_ENV_FILE > .env
+    - run: cat /home/ubuntu/.env.file > ./.env
     - run: npm run build
-    - run: npm run start
+    - run: npm run start &
