--- a/.github/workflows/CD-DEV.yml
+++ b/.github/workflows/CD-DEV.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: git pull
     - run: npm i
     - run: npm run build
     - run: pm2 restart trade-journal
